# ornament-player

./: CMakeLists.txt  README.md  ornament.c
.github/workflows/: main.yml
